# jadapy

./: README.md  requirements.txt  setup.cfg
.github/workflows/: cd.yml  ci.yml
jadapy/: ComplexEpetraInterface.py  EpetraInterface.py  NumPyInterface.py  Target.py  correction_equation.py  generalized_schur.py  jdqr.py  jdqz.py  orthogonalization.py  schur.py  utils.py
test/: test_generalized_schur.py  test_jdqr.py  test_jdqz.py  test_orthogonalization.py  test_schur.py
tests/: test_jdqr.py  test_orthogonalization.py  test_schur.py
