[metadata]
name = jadapy
version = 1.0.0
url = https://github.com/BIMAU/jadapy
license = Apache License 2.0
author = Sven Baars
author_email = s.baars@rug.nl
description = Implementations of JDQR and JDQZ with optional integration with Trilinos.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
install_requires =
    numpy
    scipy >= 1.10
packages = jadapy

[options.extras_require]
test =
    pytest
all =
    %(test)s

[aliases]
test = pytest

[tool:pytest]
norecursedirs = lib

[flake8]
ignore = E226,E261,E302,E731,C901,W503
max-line-length = 127
max-complexity = 10
exclude = lib
